Improve button accessibility

--- a/src/app/campaign/components/graph-help-modal/graph-help-modal.component.html
+++ b/src/app/campaign/components/graph-help-modal/graph-help-modal.component.html
@@ -5,7 +5,7 @@
   [kind]="'NONE'"
   [icon]="'info-circle'"
   [text]="'Help'"
-  (click)="openModal(infoModal)"
+  (clicked)="openModal(infoModal)"
 ></button>
 
 <ng-template #infoModal let-modal>
