--- a/src/app/campaign/pages/graph-page/graph-page.component.html
+++ b/src/app/campaign/pages/graph-page/graph-page.component.html
@@ -155,7 +155,7 @@
       [disabled]="isButtonDisabled"
       [text]="'Connect!'"
       [icon]="'link'"
-      (click)="pageState.set('CREATE')"
+      (clicked)="pageState.set('CREATE')"
     ></button>
   </span>
 
