--- a/src/app/design/molecules/editor/editor.component.html
+++ b/src/app/design/molecules/editor/editor.component.html
@@ -91,7 +91,7 @@
       [hotkey]="'q'"
       [disabledHotkey]="disabledHotkeys()"
       (hotkeyPressed)="cancelEdit()"
-      (click)="cancelEdit()"
+      (clicked)="cancelEdit()"
     ></button>
   </div>
 </ng-template>
