--- a/src/app/design/molecules/form/form.component.html
+++ b/src/app/design/molecules/form/form.component.html
@@ -35,7 +35,7 @@
         [kind]="cancelButtonType()"
         [icon]="'times'"
         [text]="'Cancel'"
-        (click)="onCancel()"
+        (clicked)="onCancel()"
         [hotkey]="'q'"
         [disabledHotkey]="disabledHotkeys()"
         (hotkeyPressed)="onCancel()"
