--- a/src/app/design/molecules/formly-file-field/formly-file-field.component.html
+++ b/src/app/design/molecules/formly-file-field/formly-file-field.component.html
@@ -9,7 +9,7 @@
       [icon]="'upload'"
       [text]="'Click here or paste a file into the window'"
       (focus)="formControl.markAsTouched()"
-      (click)="onButtonClick($event)"
+      (clicked)="onButtonClick($event)"
     ></button>
   </div>
   <div class="mt-2">
