--- a/src/app/design/molecules/list/list.component.html
+++ b/src/app/design/molecules/list/list.component.html
@@ -10,7 +10,7 @@
         [kind]="'PRIMARY'"
         [size]="'SMALL'"
         [icon]="'plus'"
-        (click)="onCreateButtonClick()"
+        (clicked)="onCreateButtonClick()"
       ></button>
     }
   </div>
