--- a/src/app/design/organisms/image-carousel-card/image-carousel-card.component.html
+++ b/src/app/design/organisms/image-carousel-card/image-carousel-card.component.html
@@ -111,7 +111,7 @@
           [kind]="'DARK'"
           [icon]="'times'"
           [text]="'No'"
-          (click)="onCancel()"
+          (clicked)="onCancel()"
         ></button>
         <button
           btn
@@ -119,7 +119,7 @@
           [kind]="'DANGER'"
           [icon]="'trash'"
           [text]="'Yes'"
-          (click)="onSubmit(undefined)"
+          (clicked)="onSubmit(undefined)"
         ></button>
       </div>
     </div>
