--- a/src/app/design/organisms/image-carousel/image-carousel.component.html
+++ b/src/app/design/organisms/image-carousel/image-carousel.component.html
@@ -32,7 +32,7 @@
       [kind]="'PRIMARY'"
       [size]="'SMALL'"
       [icon]="'plus-square'"
-      (click)="onImageCreate()"
+      (clicked)="onImageCreate()"
     ></button>
   }
 
@@ -46,7 +46,7 @@
       [kind]="'SECONDARY'"
       [size]="'SMALL'"
       [icon]="'pencil'"
-      (click)="onImageUpdate()"
+      (clicked)="onImageUpdate()"
     ></button>
   }
 
@@ -60,7 +60,7 @@
       [kind]="'DANGER'"
       [size]="'SMALL'"
       [icon]="'trash'"
-      (click)="onImageDelete()"
+      (clicked)="onImageDelete()"
     ></button>
   }
 </div>
