--- a/src/app/design/organisms/mobile-header/mobile-header.component.html
+++ b/src/app/design/organisms/mobile-header/mobile-header.component.html
@@ -30,7 +30,7 @@
         aria-label="Toggle offline info modal"
         [kind]="'WARNING-OUTLINE'"
         [icon]="'triangle-exclamation'"
-        (click)="openModal(offlineInfoModal)"
+        (clicked)="openModal(offlineInfoModal)"
       ></button>
     }
   </div>
