--- a/src/app/design/organisms/quote-field/quote-field.component.html
+++ b/src/app/design/organisms/quote-field/quote-field.component.html
@@ -110,7 +110,7 @@
         [kind]="'DARK'"
         [icon]="'times'"
         [text]="'No'"
-        (click)="onCancel()"
+        (clicked)="onCancel()"
       ></button>
       <button
         btn
@@ -118,7 +118,7 @@
         [kind]="'DANGER'"
         [icon]="'trash'"
         [text]="'Yes'"
-        (click)="onDelete()"
+        (clicked)="onDelete()"
       ></button>
     </div>
   </app-card>
