--- a/src/app/design/organisms/quote/quote.component.html
+++ b/src/app/design/organisms/quote/quote.component.html
@@ -55,7 +55,7 @@
               [kind]="control.type"
               [text]="control.label"
               [icon]="control.icon"
-              (click)="control.config.onClick()"
+              (clicked)="control.config.onClick()"
             ></button>
           }
           @case ("LINK") {
