--- a/src/app/design/organisms/rules/rules.component.html
+++ b/src/app/design/organisms/rules/rules.component.html
@@ -6,7 +6,7 @@
         [kind]="'PRIMARY'"
         [text]="'Add Rule'"
         [icon]="'plus'"
-        (click)="addRule()"
+        (clicked)="addRule()"
         [hotkey]="'c'"
         (hotkeyPressed)="addRule()"
       ></button>
