--- a/src/app/design/organisms/sessionaudio-player/sessionaudio-player.component.html
+++ b/src/app/design/organisms/sessionaudio-player/sessionaudio-player.component.html
@@ -44,7 +44,7 @@
       [kind]="'PRIMARY'"
       [text]="'Add Timestamp'"
       [icon]="'plus'"
-      (click)="changeTimestampState('CREATE')"
+      (clicked)="changeTimestampState('CREATE')"
     ></button>
   </div>
 </ng-template>
