--- a/src/app/design/organisms/spells/spells.component.html
+++ b/src/app/design/organisms/spells/spells.component.html
@@ -7,7 +7,7 @@
         [kind]="'PRIMARY'"
         [text]="'Add Spell'"
         [icon]="'plus'"
-        (click)="addSpell()"
+        (clicked)="addSpell()"
         [hotkey]="'c'"
         (hotkeyPressed)="addSpell()"
       ></button>
