--- a/src/app/design/templates/campaign-overview/campaign-overview.component.html
+++ b/src/app/design/templates/campaign-overview/campaign-overview.component.html
@@ -7,7 +7,7 @@
         [kind]="'SECONDARY'"
         [icon]="'sign-out-alt'"
         [text]="'Logout'"
-        (click)="logout.emit()"
+        (clicked)="logout.emit()"
       ></button>
 
       @if (isGlobalAdmin()) {
