--- a/src/app/design/templates/character-create-update/character-create-update.component.html
+++ b/src/app/design/templates/character-create-update/character-create-update.component.html
@@ -7,7 +7,7 @@
       <div class="heading__edit-cancel">
         <button
           btn
-          (click)="onCancel()"
+          (clicked)="onCancel()"
           [icon]="'times'"
           [kind]="'SECONDARY'"
           [hotkey]="'q'"
