--- a/src/app/design/templates/diaryentry/diaryentry.component.scss
+++ b/src/app/design/templates/diaryentry/diaryentry.component.scss
@@ -1,4 +1,4 @@
-::ng-deep div.entry.drag-and-drop-list-entry {
+::ng-deep li.entry.drag-and-drop-list-entry {
   background-color: var(--bs-secondary);
   color: var(--bs-white);
 }
