--- a/src/app/design/templates/login/login.component.html
+++ b/src/app/design/templates/login/login.component.html
@@ -49,7 +49,7 @@
             class="login__button-left"
             [kind]="'DARK'"
             [text]="'Cancel'"
-            (click)="setState('LOGIN')"
+            (clicked)="setState('LOGIN')"
           ></button>
           <button
             btn
