--- a/src/app/general/pages/error-page/error-page.component.html
+++ b/src/app/general/pages/error-page/error-page.component.html
@@ -32,7 +32,7 @@
       [text]="'Log in again'"
       [icon]="'redo-alt'"
       [kind]="'PRIMARY'"
-      (click)="onReLogin()"
+      (clicked)="onReLogin()"
     ></button>
   </ng-template>
 }
