--- a/src/app/campaign/components/graph-settings-modal/graph-settings-modal.component.html
+++ b/src/app/campaign/components/graph-settings-modal/graph-settings-modal.component.html
@@ -5,7 +5,7 @@
   [kind]="'NONE'"
   [icon]="'gear'"
   [text]="'Settings'"
-  (click)="openModal(settingsModal)"
+  (clicked)="openModal(settingsModal)"
 ></button>
 
 <ng-template #settingsModal let-modal>
