--- a/src/app/design/molecules/link-entry/link-entry.component.html
+++ b/src/app/design/molecules/link-entry/link-entry.component.html
@@ -21,7 +21,7 @@
       <button
         btn
         class="linkentry__delete-button"
-        (click)="changeState('DELETE')"
+        (clicked)="changeState('DELETE')"
         [size]="'SMALL'"
         [icon]="'trash'"
         [kind]="'DANGER-OUTLINE'"
@@ -41,7 +41,7 @@
       [kind]="'DANGER'"
       [size]="'SMALL'"
       [text]="'Delete'"
-      (click)="delete.emit(entry().value)"
+      (clicked)="delete.emit(entry().value)"
     ></button>
     <button
       btn
@@ -49,7 +49,7 @@
       [kind]="'DARK'"
       [size]="'SMALL'"
       [text]="'Cancel'"
-      (click)="changeState('DISPLAY')"
+      (clicked)="changeState('DISPLAY')"
     ></button>
   </div>
 </ng-template>
