--- a/src/app/design/organisms/config-table/config-table.component.html
+++ b/src/app/design/organisms/config-table/config-table.component.html
@@ -15,7 +15,7 @@
           [kind]="'DARK'"
           [icon]="table().showForm ? 'times' : 'plus'"
           [text]="table().showForm ? 'Cancel' : 'Add Entry'"
-          (click)="table().showForm = !table().showForm"
+          (clicked)="table().showForm = !table().showForm"
         ></button>
       }
 
@@ -24,7 +24,7 @@
         [kind]="'PRIMARY'"
         [icon]="'refresh'"
         [text]="'Load'"
-        (click)="loadTableEntries.emit()"
+        (clicked)="loadTableEntries.emit()"
       ></button>
     </div>
   </div>
