--- a/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.scss
+++ b/src/app/design/organisms/drag-and-drop-list/drag-and-drop-list.component.scss
@@ -1,6 +1,6 @@
 /*
  * To customize styling of entries, i.e. for background-color and color, use: 
- * ::ng-deep div.entry.drag-and-drop-list-entry {
+ * ::ng-deep li.entry.drag-and-drop-list-entry {
  *    ... your rules ...
  * }
  */
