--- a/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.html
+++ b/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.html
@@ -27,7 +27,7 @@
       [kind]="'SECONDARY'"
       [icon]="'calendar'"
       [class.disabled]="!!props.disabled"
-      (click)="datepickerInput.toggle()"
+      (clicked)="datepickerInput.toggle()"
     >
       <app-icon [icon]="'calendar'"></app-icon>
     </button>
