--- a/src/app/design/organisms/graph/graph.component.html
+++ b/src/app/design/organisms/graph/graph.component.html
@@ -8,7 +8,7 @@
         [icon]="'plus'"
         [size]="'SMALL'"
         aria-label="'zoom in to graph'"
-        (click)="onZoomButtonClick(1)"
+        (clicked)="onZoomButtonClick(1)"
       ></button>
       <input
         #zoomControl
@@ -28,7 +28,7 @@
         [icon]="'minus'"
         [size]="'SMALL'"
         aria-label="'zoom out of graph'"
-        (click)="onZoomButtonClick(-1)"
+        (clicked)="onZoomButtonClick(-1)"
       ></button>
     </div>
   </div>
