--- a/src/app/design/organisms/icon-card-list/icon-card-list.component.scss
+++ b/src/app/design/organisms/icon-card-list/icon-card-list.component.scss
@@ -1,9 +1,9 @@
 .entry {
+  margin-bottom: var(--spacer-4);
   padding-left: var(--spacer-2);
   padding-right: var(--spacer-2);
-  margin-bottom: var(--spacer-4);
 
-  &--placeholder {
+  &__placeholder {
     height: 280px;
   }
 
