--- a/src/app/design/molecules/search-field/search-field.component.scss
+++ b/src/app/design/molecules/search-field/search-field.component.scss
@@ -48,6 +48,8 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 
   &__button {
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
     &--disabled {
       cursor: not-allowed;
     }
