Make styling nicer

--- a/src/app/design/molecules/search-field/search-field.component.html
+++ b/src/app/design/molecules/search-field/search-field.component.html
@@ -25,7 +25,7 @@
         class="search__button"
         [ariaLabel]="'Start searching for ' + searchInput.value"
         [disabled]="!canTriggerSearch"
-        [kind]="canTriggerSearch ? 'PRIMARY' : 'PRIMARY-OUTLINE'"
+        [kind]="canTriggerSearch ? 'PRIMARY' : 'LIGHT-OUTLINE'"
         [icon]="'search'"
       ></button>
     </div>
