--- a/src/app/design/atoms/button-link/button-link.component.html
+++ b/src/app/design/atoms/button-link/button-link.component.html
@@ -2,6 +2,8 @@
 @if (iconVal) {
   <app-icon [class.btn__icon]="text()" [icon]="iconVal"></app-icon>
 }
-<span class="btn__text" [class.btn__text--large]="size() === 'LARGE'">
-  {{ text() }}
-</span>
+@if (text()) {
+  <span class="btn__text" [class.btn__text--large]="size() === 'LARGE'">
+    {{ text() }}
+  </span>
+}
