--- a/src/app/design/molecules/list/list.component.scss
+++ b/src/app/design/molecules/list/list.component.scss
@@ -1,5 +1,13 @@
-.list{
-  &__heading{
+.list {
+  &__list {
+    padding-left: var(--spacer-4);
+  }
+
+  &__entry {
+    list-style: disclosure-closed;
+  }
+
+  &__heading {
     display: flex;
     flex-direction: row;
   }
