--- a/src/app/design/molecules/search-field/search-field.component.html
+++ b/src/app/design/molecules/search-field/search-field.component.html
@@ -27,6 +27,7 @@
         [disabled]="!canTriggerSearch"
         [kind]="canTriggerSearch ? 'PRIMARY' : 'LIGHT-OUTLINE'"
         [icon]="'search'"
+        [type]="'submit'"
       ></button>
     </div>
   </form>
