Make scroll mode on home screen controllable

--- a/src/app/design/molecules/choice-select/choice-select.component.scss
+++ b/src/app/design/molecules/choice-select/choice-select.component.scss
@@ -1,4 +1,8 @@
-.form-select{
+.form-select {
   font-weight: inherit;
   font-size: inherit;
+
+  &:focus-visible {
+    outline: var(--focus-outline);
+  }
 }
