--- a/src/app/design/atoms/switch/switch.component.scss
+++ b/src/app/design/atoms/switch/switch.component.scss
@@ -1,11 +1,14 @@
 :host {
-  display: flex;
-  width: fit-content;
   align-items: center;
-  gap: var(--spacer-3);
 }
 
 .form-check-input {
-  height: var(--spacer-4);
-  width: var(--spacer-5);
+  min-height: var(--spacer-4);
+  min-width: var(--spacer-5);
+  margin-right: var(--spacer-2);
+  margin-top: unset;
+
+  &:focus-visible {
+    outline: var(--focus-outline);
+  }
 }
