Use correct button event

--- a/src/app/design/molecules/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/design/molecules/confirmation-modal/confirmation-modal.component.html
@@ -8,7 +8,7 @@
         [kind]="'NONE'"
         [icon]="'xmark'"
         aria-label="Close"
-        (click)="modal.dismiss()"
+        (clicked)="modal.dismiss()"
       ></button>
     </div>
 
