--- a/src/app/design/templates/campaign-admin/campaign-admin.component.html
+++ b/src/app/design/templates/campaign-admin/campaign-admin.component.html
@@ -267,7 +267,7 @@
     [kind]="'PRIMARY'"
     [text]="'Add Member'"
     [icon]="'user-plus'"
-    (click)="changeState('member', true)"
+    (clicked)="changeState('member', true)"
   ></button>
 </ng-template>
 
@@ -277,7 +277,7 @@
     [kind]="'PRIMARY'"
     [text]="'Add Admin'"
     [icon]="'user-plus'"
-    (click)="changeState('admin', true)"
+    (clicked)="changeState('admin', true)"
   ></button>
 </ng-template>
 
@@ -287,7 +287,7 @@
     [kind]="'PRIMARY'"
     [text]="'Add Guest'"
     [icon]="'user-plus'"
-    (click)="changeState('guest', true)"
+    (clicked)="changeState('guest', true)"
   ></button>
 </ng-template>
 
@@ -297,6 +297,6 @@
     [kind]="'PRIMARY'"
     [text]="'Add EmptySearchResponse'"
     [icon]="'plus'"
-    (click)="toggleResponseAddForm()"
+    (clicked)="toggleResponseAddForm()"
   ></button>
 </ng-template>
