--- a/src/app/design/molecules/article-footer/article-footer.component.html
+++ b/src/app/design/molecules/article-footer/article-footer.component.html
@@ -6,7 +6,7 @@
   @if (showDelete()) {
     <app-confirmation-toggle-button
       aria-label="Delete current page"
-      [confirmationQuestion]="deleteMessage()"
+      [itemToDelete]="deleteMessage()"
       [icon]="'trash'"
       (confirm)="delete.emit()"
     ></app-confirmation-toggle-button>
