--- a/src/app/design/organisms/session/session.component.html
+++ b/src/app/design/organisms/session/session.component.html
@@ -92,7 +92,7 @@
   @if (canDelete()) {
     <app-confirmation-toggle-button
       class="card__delete-confirmer"
-      [confirmationQuestion]="'Delete this session?'"
+      [itemToDelete]="'Session ' + session().name"
       [icon]="'trash'"
       [enableHotkey]="!disabledHotkeys()"
       (confirm)="onSessionDelete()"
