--- a/src/app/design/templates/location-template/location-template.component.html
+++ b/src/app/design/templates/location-template/location-template.component.html
@@ -96,7 +96,7 @@
       [buttonLink]="overviewUrl"
       [buttonLabel]="'Back to Creatures'"
       [showDelete]="canDelete()"
-      [deleteMessage]="'Delete ' + location().name + '?'"
+      [deleteMessage]="'Location ' + location().name"
       (delete)="locationDelete.emit(location())"
     ></app-article-footer>
   </article>
