--- a/src/app/design/templates/map/map.component.html
+++ b/src/app/design/templates/map/map.component.html
@@ -66,7 +66,7 @@
       [showDelete]="canDelete()"
       [buttonLink]="homeUrl()"
       [buttonLabel]="'Back to Frontpage'"
-      [deleteMessage]="'Delete Map of ' + map().name + '?'"
+      [deleteMessage]="'Map of ' + map().name"
       (delete)="onMapDelete()"
     ></app-article-footer>
   </article>
