--- a/src/app/design/templates/marker/marker.component.html
+++ b/src/app/design/templates/marker/marker.component.html
@@ -79,7 +79,7 @@
       [buttonLink]="locationUrl"
       [buttonLabel]="'Back to ' + marker.location_details?.name"
       [showDelete]="canDelete"
-      [deleteMessage]="'Delete Marker?'"
+      [deleteMessage]="'Marker'"
       (delete)="markerDelete.emit(marker)"
     ></app-article-footer>
   </article>
