--- a/src/app/design/templates/creature/creature.component.html
+++ b/src/app/design/templates/creature/creature.component.html
@@ -55,7 +55,7 @@
       [buttonLink]="overviewUrl()"
       [buttonLabel]="'Back to Creatures'"
       [showDelete]="canDelete()"
-      [deleteMessage]="'Delete ' + creature().name + '?'"
+      [deleteMessage]="'Creature ' + creature().name"
       (delete)="creatureDelete.emit(creature())"
     ></app-article-footer>
   </article>
