--- a/src/app/design/templates/profile/profile.component.html
+++ b/src/app/design/templates/profile/profile.component.html
@@ -97,7 +97,7 @@
       @if (canDeleteProfile) {
         <div class="col-md-3">
           <app-confirmation-toggle-button
-            [confirmationQuestion]="'Delete your account?'"
+            [itemToDelete]="'your account'"
             [icon]="'trash'"
             (confirm)="profileDelete.emit(user)"
           ></app-confirmation-toggle-button>
